--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 language: ruby
+
+matrix:
+  fast_finish: true
+  
+cache:
+  - apt
+  - npm
+  
 script:
   - chmod u+x ./install/mean.sh
   - ./install/mean.sh
+
+#after_success:
+#  - sleep 5; curl 0.0.0.0:3000
