--- a/circle.yml
+++ b/circle.yml
@@ -9,11 +9,13 @@ dependencies:
     
 test:
   override:
-     - echo $(docker run -d brownman/runner2 /bin/bash -c "netstat -ntlp")
+ #   - docker run -d -p 9200:9200 brownman/docker-gitlab-ci-runner; sleep 10
+#     - curl --retry 10 --retry-delay 5 -v http://localhost:3000
+ #    - echo $(docker run -d -p 3000:3000 brownman/runner2 /bin/bash -c "netstat -ntlp")
      - docker inspect  brownman/runner2
-
-   #  - docker run -d -p 9200:9200 brownman/docker-gitlab-ci-runner; sleep 10
-  #   - curl --retry 10 --retry-delay 5 -v http://localhost:9200
+     - docker run -d -p 3000:3000 brownman/runner2 /bin/bash 'env; locate myApp;';
+     - sleep 10
+     - curl --retry 10 --retry-delay 5 -v http://localhost:3000
 
 deployment:
   hub:
