--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-services: mongodb
+#services: mongodb
 
 matrix:
   fast_finish: true
@@ -9,8 +9,9 @@ cache:
   - npm
   
 script:
-  - chmod u+x ./install/mean.sh
-  - ./install/mean.sh
+  - chmod u+x travis.sh
+  - ./travis.sh
+
 
 #after_success:
 #  - sleep 5; curl 0.0.0.0:3000
