--- a/circle.yml
+++ b/circle.yml
@@ -12,8 +12,8 @@ test:
  #   - docker run -d -p 9200:9200 brownman/docker-gitlab-ci-runner; sleep 10
 #     - curl --retry 10 --retry-delay 5 -v http://localhost:3000
  #    - echo $(docker run -d -p 3000:3000 brownman/runner2 /bin/bash -c "netstat -ntlp")
-    - chmod u+x test.sh
-    - ./test.sh
+    - chmod u+x circle.sh
+    - ./circle.sh
      #- docker inspect  brownman/runner2
      #- docker run -d -p 3000:3000 brownman/runner2 /bin/bash 'env; ls /home/mean; ls ls /home/mean/mean; locate myApp;';
      #- sleep 10
