--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,9 @@ test:
      #- docker run -d -p 3000:3000 brownman/runner2 /bin/bash 'env; ls /home/mean; ls ls /home/mean/mean; locate myApp;';
      #- sleep 10
      #- curl --retry 10 --retry-delay 5 -v http://localhost:3000
-
+  post:
+    - bash -c 'env' > $CIRCLE_ARTIFACTS/env.txt
+    
 deployment:
   hub:
     branch: master
