--- a/config.cfg
+++ b/config.cfg
@@ -6,5 +6,10 @@ commander(){
     eval "$cmd"
 }
 ###################################### #var
+distro_name(){
+        echo $(lsb_release -sc)
+}
+
 
 export -f commander
+export -f distro_name
