--- a/config.cfg
+++ b/config.cfg
@@ -2,8 +2,8 @@
 commander(){
     local args=( $@ )
     local cmd="${args[@]}"
-    echo "[CMD] $cmd"
-    eval "$cmd"
+    echo "[CMD] $cmd" 
+    eval "$cmd" 1>/tmp/out 2>/tmp/err
 }
 ###################################### #var
 distro_name(){
