--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,45 @@
 ################################### helpers
+print_color_n () 
+{ 
+    use assert;
+    if [ $# -gt 1 ]; then
+        local color=$1;
+        assert is_number "$color";
+        shift;
+        local args="${@:-?}";
+        echo -en "\x1B[01;${color}m[*]\x1B[0m ${args} " 1>&2;
+    fi
+}
+print_color () 
+{ 
+    local cmd="print_color_n $@";
+    $cmd;
+    echo 1>&2
+}
+
+print_ok(){
+        print_color 32 $@
+}
+
+print_error(){
+        print_color 32 $@
+}
+
+
+indicator () 
+{ 
+    local res_last=${1:-$?};
+    local num="${1:-$res_last}";
+    use print;
+    if [ $num -eq 0 ]; then
+        print ok;
+    else
+        print error;
+    fi;
+    return $num
+}
+
+
 commander(){
     local args=( $@ )
     local cmd="${args[@]}"
@@ -11,6 +52,10 @@ distro_name(){
 }
 
 
-  
+export -f print_ok
+export -f print_error
+export -f indicator
+export -f print_color
+export -f print_color_n
 export -f commander
 export -f distro_name
