--- a/config.cfg
+++ b/config.cfg
@@ -1,11 +1,9 @@
 ################################### helpers
 print_color_n () 
 { 
-    use assert;
-    if [ $# -gt 1 ]; then
+     if [ $# -gt 1 ]; then
         local color=$1;
-        assert is_number "$color";
-        shift;
+         shift;
         local args="${@:-?}";
         echo -en "\x1B[01;${color}m[*]\x1B[0m ${args} " 1>&2;
     fi
@@ -18,11 +16,11 @@ print_color ()
 }
 
 print_ok(){
-        print_color 32 $@
+        print_color_n  32 'v'
 }
 
 print_error(){
-        print_color 32 $@
+        print_color_n  31 'x'
 }
 
 
@@ -32,9 +30,9 @@ indicator ()
     local num="${1:-$res_last}";
     use print;
     if [ $num -eq 0 ]; then
-        print ok;
+        print_ok;
     else
-        print error;
+        print_error;
     fi;
     return $num
 }
@@ -45,6 +43,7 @@ commander(){
     local cmd="${args[@]}"
     echo "[CMD] $cmd" 
     eval "$cmd" 1>/tmp/out 2>/tmp/err
+    indicator $?
 }
 ###################################### #var
 distro_name(){
