--- a/config.cfg
+++ b/config.cfg
@@ -16,11 +16,11 @@ print_color ()
 }
 
 print_ok(){
-        print_color_n  32 'v'
+        print_color_n  32 
 }
 
 print_error(){
-        print_color_n  31 'x'
+        print_color_n  31 
 }
 
 
