--- a/config.cfg
+++ b/config.cfg
@@ -16,11 +16,11 @@ print_color ()
 }
 
 print_ok(){
-        print_color_n  32 
+        print_color_n  32 ''
 }
 
 print_error(){
-        print_color_n  31 
+        print_color_n  31 ''
 }
 
 
