--- a/config.cfg
+++ b/config.cfg
@@ -40,7 +40,7 @@ indicator ()
 commander(){
     local args=( $@ )
     local cmd="${args[@]}"
-    echo "[CMD] $cmd" 
+    echo -n "[CMD] $cmd" 
     eval "$cmd" 1>/tmp/out 2>/tmp/err
     indicator $?
 }
