--- a/config.cfg
+++ b/config.cfg
@@ -41,7 +41,12 @@ commander(){
     local args=( $@ )
     local cmd="${args[@]}"
     echo -n "[CMD] $cmd" 
-    eval "$cmd" 1>/tmp/out 2>/tmp/err
+    MODE_DEBUG=${MODE_DEBUG:-false}
+    if [ "$MODE_DEBUG" = true ];then
+        eval "$cmd" 1>/tmp/out 2>/tmp/err
+    else
+        eval "$cmd"
+    fi
     indicator $?
 }
 ###################################### #var
