--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,10 @@
 ################################### helpers
+export MODE_DEBUG=${MODE_DEBUG:-false}
+if [ "$MODE_DEBUG" = true ];then
+     alias commander=mute
+fi
+
+
 print_color_n () 
 { 
      if [ $# -gt 1 ]; then
@@ -41,14 +47,19 @@ commander(){
     local args=( $@ )
     local cmd="${args[@]}"
     echo -n "[CMD] $cmd" 
-    MODE_DEBUG=${MODE_DEBUG:-false}
-    if [ "$MODE_DEBUG" = true ];then
-        eval "$cmd" 1>/tmp/out 2>/tmp/err
-    else
-        eval "$cmd"
-    fi
+    eval "$cmd"
     indicator $?
 }
+
+mute(){
+    local args=( $@ )
+    local cmd="${args[@]}"
+    echo -n "[MUTE] $cmd" 
+    eval "$cmd" 1>/tmp/out 2>/tmp/err
+    indicator $?
+}
+
+
 ###################################### #var
 distro_name(){
         echo $(lsb_release -sc)
@@ -61,4 +72,5 @@ export -f indicator
 export -f print_color
 export -f print_color_n
 export -f commander
+export -f mute
 export -f distro_name
