--- a/config.cfg
+++ b/config.cfg
@@ -1,9 +1,14 @@
+shopt -s expand_aliases
 ################################### helpers
+
 export MODE_DEBUG=${MODE_DEBUG:-false}
 if [ "$MODE_DEBUG" = true ];then
      alias commander=mute
 fi
 
+trace(){
+echo 1>&2 $@
+}
 
 print_color_n () 
 { 
@@ -73,4 +78,5 @@ export -f print_color
 export -f print_color_n
 export -f commander
 export -f mute
+export -f trace
 export -f distro_name
