cleaner: mv code to config.cfg

--- a/config.cfg
+++ b/config.cfg
@@ -6,6 +6,13 @@ if [ "$MODE_DEBUG" = true ];then
      alias commander=mute
 fi
 
+
+trap_err(){
+  echo $FUNCNAME
+  exit 1
+}
+
+
 trace(){
 echo 1>&2 $@
 }
@@ -80,3 +87,5 @@ export -f commander
 export -f mute
 export -f trace
 export -f distro_name
+export -f trap_err
+
