--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ cache:
 script:
   - sudo apt-get -y update
   - chmod u+x travis.sh
-  - ./travis.sh
+  - ./travis.sh install
 
 
 #after_success:
