--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,15 @@ cache:
   - apt
   - npm
   - bundler
-  - vendor/bundle
-  - npm_modules
-  - /tmp
-  - /opt
+#  - vendor/bundle
+#  - npm_modules
+#  - /tmp
+#  - /opt
   
 script:
   - sudo apt-get -y update
+  - chmod u+x once.sh
+  - ./once.sh
   - chmod u+x travis.sh
   - ./travis.sh install
 
