--- a/config.cfg
+++ b/config.cfg
@@ -77,6 +77,7 @@ distro_name(){
         echo $(lsb_release -sc)
 }
 
+export cmd_trap_err='trap trap_err ERR'
 
 export -f print_ok
 export -f print_error
