--- a/config.cfg
+++ b/config.cfg
@@ -77,6 +77,8 @@ distro_name(){
         echo $(lsb_release -sc)
 }
 
+  export dir_myApp='/opt/mean1'
+  export dir_nodejs='/opt/nodejs'
 export cmd_trap_err='trap trap_err ERR'
 
 export -f print_ok
