config.cfg: groupt vars related to dir-tree

--- a/config.cfg
+++ b/config.cfg
@@ -5,7 +5,15 @@ export MODE_DEBUG=${MODE_DEBUG:-false}
 if [ "$MODE_DEBUG" = true ];then
      alias commander=mute
 fi
+##############################################dir - structure
+export dir_base='/opt'
+export dir_myApp="$dir_base/myApp"
+export dir_nodejs="$dir_base/nodejs"
+###############################################
 
+
+
+####################################################################
 
 trap_err(){
   echo $FUNCNAME
@@ -77,8 +85,8 @@ distro_name(){
         echo $(lsb_release -sc)
 }
 
-  export dir_myApp='/opt/mean1'
-  export dir_nodejs='/opt/nodejs'
+
+
 export cmd_trap_err='trap trap_err ERR'
 
 export -f print_ok
