--- a/config.cfg
+++ b/config.cfg
@@ -7,7 +7,7 @@ if [ "$MODE_DEBUG" = true ];then
 fi
 ##############################################dir - structure
 export dir_base='/opt'
-export dir_myApp="$dir_base/myApp"
+export dir_my_app="$dir_base/myApp"
 export dir_nodejs="$dir_base/nodejs"
 ###############################################
 
