--- a/config.cfg
+++ b/config.cfg
@@ -11,7 +11,10 @@ export dir_my_app="$dir_base/myApp"
 export dir_nodejs="$dir_base/nodejs"
 ###############################################
 
-
+mkdir1(){
+  local dir="$1" 
+  test -d $dir || { mkdir -p $dir; }
+}
 
 ####################################################################
 
@@ -99,4 +102,4 @@ export -f mute
 export -f trace
 export -f distro_name
 export -f trap_err
-
+export -f mkdir1
