--- a/config.cfg
+++ b/config.cfg
@@ -5,9 +5,12 @@ export MODE_DEBUG=${MODE_DEBUG:-false}
 if [ "$MODE_DEBUG" = true ];then
      alias commander=mute
 fi
+
+export APP_NAME='myApp'
 ##############################################dir - structure
 export dir_base='/opt'
-export dir_my_app="$dir_base/myApp"
+export path_my_app="$dir_base"
+export dir_my_app="$dir_base/$APP_NAME"
 export dir_nodejs="$dir_base/nodejs"
 ###############################################
 
