--- a/config.cfg
+++ b/config.cfg
@@ -72,7 +72,7 @@ indicator ()
 commander(){
     local args=( $@ )
     local cmd="${args[@]}"
-    echo -n "[CMD] $cmd" 
+    trace "[CMD] $cmd" 
     eval "$cmd"
     indicator $?
 }
@@ -80,7 +80,7 @@ commander(){
 mute(){
     local args=( $@ )
     local cmd="${args[@]}"
-    echo -n "[MUTE] $cmd" 
+    trace "[MUTE] $cmd" 
     eval "$cmd" 1>/tmp/out 2>/tmp/err
     indicator $?
 }
@@ -91,6 +91,14 @@ distro_name(){
         echo $(lsb_release -sc)
 }
 
+
+ensure(){
+    local args=( $@ )
+    local cmd="${args[@]}"
+    trace "[ENSURE] $cmd" 
+    
+  (  eval "$cmd" ) || { print_error; exit 1; }
+}
 
 
 export cmd_trap_err='trap trap_err ERR'
@@ -106,3 +114,4 @@ export -f trace
 export -f distro_name
 export -f trap_err
 export -f mkdir1
+export -f ensure
