--- a/config.cfg
+++ b/config.cfg
@@ -7,6 +7,7 @@ if [ "$MODE_DEBUG" = true ];then
 fi
 
 export APP_NAME='myApp'
+export VER_MEAN_CLI='0.9.3'
 ##############################################dir - structure
 export dir_base='/opt'
 export path_my_app="$dir_base"
