--- a/config.cfg
+++ b/config.cfg
@@ -18,6 +18,7 @@ export dir_nodejs="$dir_base/nodejs"
 mkdir1(){
   local dir="$1" 
   test -d $dir || { mkdir -p $dir; }
+  ensure test -d $dir
 }
 
 ####################################################################
