--- a/config.cfg
+++ b/config.cfg
@@ -99,7 +99,7 @@ ensure(){
     local cmd="${args[@]}"
     trace "[ENSURE] $cmd" 
     
-  (  eval "$cmd" ) || { print_error; exit 1; }
+  {  eval "$cmd"; indicator $?; } || { print_error; exit 1; }
 }
 
 
