--- a/config.cfg
+++ b/config.cfg
@@ -50,11 +50,11 @@ print_color ()
 }
 
 print_ok(){
-        print_color  32 ''
+        print_color  32 '*'
 }
 
 print_error(){
-        print_color  31 ''
+        print_color  31 '*'
 }
 
 
