--- a/config.cfg
+++ b/config.cfg
@@ -2,6 +2,9 @@ shopt -s expand_aliases
 ################################### helpers
 
 export MODE_DEBUG=${MODE_DEBUG:-false}
+print_line
+trace "[MODE DEBUG] $MODE_DEBUG"
+print_line
 if [ "$MODE_DEBUG" = true ];then
      alias commander=mute
 fi
@@ -27,7 +30,9 @@ trap_err(){
   echo $FUNCNAME
   exit 1
 }
-
+print_line(){
+trace '--------------------------'
+}
 
 trace(){
 echo 1>&2 $@
@@ -117,3 +122,4 @@ export -f distro_name
 export -f trap_err
 export -f mkdir1
 export -f ensure
+export -f print_line
