--- a/config.cfg
+++ b/config.cfg
@@ -5,7 +5,7 @@ export MODE_DEBUG=${MODE_DEBUG:-false}
 print_line
 trace "[MODE DEBUG] $MODE_DEBUG"
 print_line
-if [ "$MODE_DEBUG" = true ];then
+if [ "$MODE_DEBUG" = false ];then
      alias commander=mute
 fi
 
