--- a/config.cfg
+++ b/config.cfg
@@ -1,14 +1,6 @@
 shopt -s expand_aliases
 ################################### helpers
 
-export MODE_DEBUG=${MODE_DEBUG:-false}
-print_line
-trace "[MODE DEBUG] $MODE_DEBUG"
-print_line
-if [ "$MODE_DEBUG" = false ];then
-     alias commander=mute
-fi
-
 export APP_NAME='myApp'
 export VER_MEAN_CLI='0.9.3'
 ##############################################dir - structure
@@ -107,6 +99,15 @@ ensure(){
   {  eval "$cmd"; indicator $?; } || { print_error; exit 1; }
 }
 
+decide(){
+export MODE_DEBUG=${MODE_DEBUG:-false}
+print_line
+trace "[MODE DEBUG] $MODE_DEBUG"
+print_line
+if [ "$MODE_DEBUG" = false ];then
+     alias commander=mute
+fi
+}
 
 export cmd_trap_err='trap trap_err ERR'
 
@@ -123,3 +124,6 @@ export -f trap_err
 export -f mkdir1
 export -f ensure
 export -f print_line
+
+
+decide
