--- a/config.cfg
+++ b/config.cfg
@@ -99,7 +99,7 @@ ensure(){
   {  eval "$cmd"; indicator $?; } || { print_error; exit 1; }
 }
 
-decide(){
+set_mode(){
 export MODE_DEBUG=${MODE_DEBUG:-false}
 print_line
 trace "[MODE DEBUG] $MODE_DEBUG"
@@ -111,6 +111,7 @@ fi
 
 export cmd_trap_err='trap trap_err ERR'
 
+export -f set_mode
 export -f print_ok
 export -f print_error
 export -f indicator
