--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ cache:
 #  - /opt
   
 script:
-  - sudo apt-get -y update
+  - sudo apt-get -y update 1>/devnull
   - chmod u+x once.sh
   - ./once.sh
   - chmod u+x travis.sh
