trap err - print

--- a/config.cfg
+++ b/config.cfg
@@ -19,6 +19,7 @@ mkdir1(){
 ####################################################################
 
 trap_err(){
+  print_line
   echo $FUNCNAME
   exit 1
 }
