--- a/config.cfg
+++ b/config.cfg
@@ -81,7 +81,7 @@ mute(){
     local args=( $@ )
     local cmd="${args[@]}"
     trace "[MUTE] $cmd" 
-    eval "$cmd" 1>/tmp/out 2>/tmp/err
+    eval "$cmd" 1>/tmp/out 2>/tmp/err || { exiting; }
     indicator $?
 }
 
@@ -109,6 +109,24 @@ if [ "$MODE_DEBUG" = false ];then
      alias commander=mute
 fi
 }
+cat1(){
+local file=$1
+print_line
+trace file: $file
+test -f $file && test -s $file && cat -n 1>&2 $file
+print_line
+}
+
+exiting(){
+local num=${1:-1} #default: assume err
+if [ $num -eq 0 ];then
+trace bye bye
+else
+cat1 /tmp/err
+cat1 /tmp/out
+fi
+
+}
 
 export cmd_trap_err='trap trap_err ERR'
 
@@ -126,3 +144,4 @@ export -f trap_err
 export -f mkdir1
 export -f ensure
 export -f print_line
+export -f exiting
