commander: exit on err

--- a/config.cfg
+++ b/config.cfg
@@ -73,7 +73,7 @@ commander(){
     local args=( $@ )
     local cmd="${args[@]}"
     trace "[CMD] $cmd" 
-    eval "$cmd"
+    eval "$cmd" || { exiting; }
     indicator $?
 }
 
