--- a/config.cfg
+++ b/config.cfg
@@ -111,10 +111,14 @@ fi
 }
 cat1(){
 local file=$1
+
+test -f $file && test -s $file && { \
 print_line
-trace file: $file
-test -f $file && test -s $file && cat -n 1>&2 $file
+trace "[file] $file"
 print_line
+cat -n 1>&2 $file
+print_line;
+}
 }
 
 exiting(){
