helpers: +print_func +trace_n

--- a/config.cfg
+++ b/config.cfg
@@ -9,7 +9,11 @@ export path_my_app="$dir_base"
 export dir_my_app="$dir_base/$APP_NAME"
 export dir_nodejs="$dir_base/nodejs"
 ###############################################
-
+print_func(){
+trace_n '--------------->'
+trace_n "$FUNCNAME[1]"
+trace_n '>---------------'
+}
 mkdir1(){
   local dir="$1" 
   test -d $dir || { mkdir -p $dir; }
@@ -29,6 +33,9 @@ trace '--------------------------'
 
 trace(){
 echo 1>&2 $@
+}
+trace_n(){
+echo  1>&2 -n $@
 }
 
 print_color_n () 
@@ -149,3 +156,5 @@ export -f mkdir1
 export -f ensure
 export -f print_line
 export -f exiting
+export -f print_func
+export -f trace_n
