try: fix output of fs
ls?
echo * ?

--- a/config.cfg
+++ b/config.cfg
@@ -49,17 +49,15 @@ print_color_n ()
 }
 print_color () 
 { 
-    local cmd="print_color_n $@";
-    $cmd;
-    echo 1>&2
+ print_color_n $@ 
 }
 
 print_ok(){
-        print_color  32 '*'
+        print_color  32 '[V]'
 }
 
 print_error(){
-        print_color  31 '*'
+        print_color  31 '[X]'
 }
 
 
@@ -72,7 +70,7 @@ indicator ()
     else
         print_error;
     fi;
-    return $num
+    #return $num
 }
 
 
