--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,26 @@ language: ruby
 #node_js
 #services: mongodb
 env:
+
   global:
     - MODE_DEBUG=false 
   matrix:
-    - RUN="mean"
-    - RUN="test_err"
-    - RUN=mean
-    - RUN=ruby
-    - RUN=mongo
-    - RUN=apt
-    - RUN=ssh
-    - RUN=all
-
+    rvm:
+      - 1.8.7
+      - 1.9.2
+      - 1.9.3
+    env:
+      - RUN="mean"
+      - RUN="test_err"
+      - RUN=mean
+      - RUN=ruby
+      - RUN=mongo
+      - RUN=apt
+      - RUN=ssh
+      - RUN=all
+  
+        
       
-    
 cache:
   - apt
   - npm
