--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,10 @@
 shopt -s expand_aliases
-################################### helpers
 
+############################################## on demand
+export cmd_trap_err='trap trap_err ERR'
+################################### system
+export DEBIAN_FRONTEND=noninteractive
+############################################## custom names
 export APP_NAME='myApp'
 export VER_MEAN_CLI='0.9.3'
 ##############################################dir - structure
@@ -8,7 +12,7 @@ export dir_base='/opt'
 export path_my_app="$dir_base"
 export dir_my_app="$dir_base/$APP_NAME"
 export dir_nodejs="$dir_base/nodejs"
-###############################################
+############################################### helpers
 print_func(){
 trace_n '--------------->'
 trace_n "$FUNCNAME[1]"
@@ -137,7 +141,6 @@ fi
 
 }
 
-export cmd_trap_err='trap trap_err ERR'
 
 export -f set_mode
 export -f print_ok
@@ -156,3 +159,4 @@ export -f print_line
 export -f exiting
 export -f print_func
 export -f trace_n
+
