--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,8 @@ cache:
   
 script:
   - sudo apt-get -y update 1>/dev/null
-  - chmod u+x once.sh
-  - ./once.sh
   - chmod u+x travis.sh
-  - ./travis.sh install
+  - ./travis.sh
 
 
 #after_success:
