--- a/config.cfg
+++ b/config.cfg
@@ -140,8 +140,11 @@ cat1 /tmp/out
 fi
 
 }
-
-
+init_cfg(){
+local dir=$dir_base
+ sudo chmod 777 $dir;
+}
+export -f init_cfg
 export -f set_mode
 export -f print_ok
 export -f print_error
