mute: helper: ensure()

--- a/config.cfg
+++ b/config.cfg
@@ -104,9 +104,9 @@ distro_name(){
 ensure(){
     local args=( $@ )
     local cmd="${args[@]}"
-    trace "[ENSURE] $cmd" 
-    
-  {  eval "$cmd"; indicator $?; } || { print_error; exit 1; }
+  
+  {  eval "$cmd"; indicator $?; } || {   \
+  trace "[ENSURE] $cmd"; print_error; exit 1; }
 }
 
 set_mode(){
