--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ env:
   global:
     - MODE_DEBUG=false 
   matrix:
+    fast_finish: true
     allow_failures:
       - RUN="test_err"
-    fast_finish: 
+    env:
       - RUN="mean"
       - RUN=mean
       - RUN=ruby
