pretty print: endl on funcs: commander, mute

--- a/config.cfg
+++ b/config.cfg
@@ -81,7 +81,7 @@ indicator ()
 commander(){
     local args=( $@ )
     local cmd="${args[@]}"
-    trace "[CMD] $cmd" 
+    trace_n "[CMD] $cmd" 
     eval "$cmd" || { exiting; }
     indicator $?
 }
@@ -89,7 +89,7 @@ commander(){
 mute(){
     local args=( $@ )
     local cmd="${args[@]}"
-    trace "[MUTE] $cmd" 
+    trace_n "[MUTE] $cmd" 
     eval "$cmd" 1>/tmp/out 2>/tmp/err || { exiting; }
     indicator $?
 }
