matrix: try fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ env:
   global:
     - MODE_DEBUG=false 
   matrix:
+    allow_failures:
+    - RUN=test_err
+    fast_finish:
     - RUN=mean
     - RUN=ruby
     - RUN=mongo
