--- a/config.cfg
+++ b/config.cfg
@@ -58,11 +58,13 @@ print_color ()
 }
 
 print_ok(){
-        print_color  32 '[V]'
+        print_color  32 ''
+        #'[V]'
 }
 
 print_error(){
-        print_color  31 '[X]'
+        print_color  31 ''
+        #'[X]'
 }
 
 
