--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,5 @@
 shopt -s expand_aliases
+set -u
 
 ############################################## on demand
 export cmd_trap_err='trap trap_err ERR'
@@ -12,6 +13,7 @@ export dir_base='/opt'
 export path_my_app="$dir_base"
 export dir_my_app="$dir_base/$APP_NAME"
 export dir_nodejs="$dir_base/nodejs"
+export dir_gitlab_ci_runner_repo="$dir_base/gitlab-ci-runner.git"
 ############################################### helpers
 print_func(){
 trace_n '--------------->'
