--- a/config.cfg
+++ b/config.cfg
@@ -56,16 +56,16 @@ print_color_n ()
 print_color () 
 { 
  print_color_n $@ 
- trace ''
+ trace '.'
 }
 
 print_ok(){
-        print_color  32 ''
+        print_color  32 '.'
         #'[V]'
 }
 
 print_error(){
-        print_color  31 ''
+        print_color  31 '.'
         #'[X]'
 }
 
