--- a/config.cfg
+++ b/config.cfg
@@ -86,7 +86,7 @@ indicator ()
 commander(){
     local args=( $@ )
     local cmd="${args[@]}"
-    trace_n "[CMD] $cmd" 
+    trace "[CMD] $cmd" 
     eval "$cmd" || { exiting; }
     indicator $?
 }
