--- a/config.cfg
+++ b/config.cfg
@@ -126,13 +126,13 @@ fi
 cat1(){
 local file=$1
 
-test -f $file && test -s $file && { \
+test -f $file && test -s $file && (
 print_line
 trace "[file] $file"
 print_line
 cat -n 1>&2 $file
 print_line;
-}
+)
 }
 
 exiting(){
