--- a/config.cfg
+++ b/config.cfg
@@ -143,9 +143,9 @@ else
 cat1 /tmp/err
 #cat1 /tmp/out
 fi
-commander exit $num
-
+exit $num
 }
+
 init_cfg(){
 local dir=$dir_base
  sudo chmod 777 $dir;
