--- a/config.cfg
+++ b/config.cfg
@@ -138,9 +138,9 @@ print_line;
 exiting(){
 local num=${1:-1} #default: assume err
 if [ $num -eq 0 ];then
-trace bye bye
+echo trace bye bye
 else
-cat1 /tmp/err
+echo cat1 /tmp/err
 #cat1 /tmp/out
 fi
 exit $num
