cat1: try fix case: file not found

--- a/config.cfg
+++ b/config.cfg
@@ -126,7 +126,7 @@ fi
 cat1(){
 local file=$1
 
-test -f $file && (test -s $file ) && (
+test -f $file  && (
 print_line
 trace "[file] $file"
 print_line
