--- a/config.cfg
+++ b/config.cfg
@@ -87,7 +87,8 @@ commander(){
     local args=( $@ )
     local cmd="${args[@]}"
     trace "[CMD] $cmd" 
-    eval "$cmd" || { exiting; }
+    eval "$cmd" 
+    #|| { exiting; }
     indicator $?
 }
 
