ok: fix funcname() error on array calling

--- a/config.cfg
+++ b/config.cfg
@@ -17,8 +17,8 @@ export dir_gitlab_ci_runner_repo="$dir_base/gitlab-ci-runner.git"
 ############################################### helpers
 print_func(){
 trace_n '--------------->'
-trace_n "$FUNCNAME[1]"
-trace_n '>---------------'
+trace_n "${FUNCNAME[1]}"
+trace '<---------------'
 }
 mkdir1(){
   local dir="$1" 
