config.cfg: linting

--- a/config.cfg
+++ b/config.cfg
@@ -87,9 +87,9 @@ commander(){
     local args=( $@ )
     local cmd="${args[@]}"
     trace "[CMD] $cmd" 
-    eval "$cmd" 
+    eval "$cmd" || { exit 1; }
     #|| { exiting; }
-    indicator $?
+    #indicator $? - no sense here
 }
 
 mute(){
@@ -111,8 +111,7 @@ ensure(){
     local args=( $@ )
     local cmd="${args[@]}"
   
-  {  eval "$cmd"; indicator $?; } || {   \
-  trace "[ENSURE] $cmd"; print_error; exit 1; }
+  (  eval "$cmd" ) || {  trace "[ENSURE] $cmd"; print_error; exit 1; }
 }
 
 set_mode(){
