debug: config.cfg - line 90 --> expose caller func

--- a/config.cfg
+++ b/config.cfg
@@ -3,6 +3,7 @@ set -u
 
 ############################################## on demand
 export cmd_trap_err='trap trap_err ERR'
+export cmd_caller='echo 1>&2 "[CALLER] $(caller)"'
 ################################### system
 export DEBIAN_FRONTEND=noninteractive
 ############################################## custom names
@@ -86,6 +87,8 @@ indicator ()
 commander(){
     local args=( $@ )
     local cmd="${args[@]}"
+eval "$cmd_caller"
+
     trace "[CMD] $cmd" 
     eval "$cmd" || { exit 1; }
     #|| { exiting; }
