--- a/config.cfg
+++ b/config.cfg
@@ -24,15 +24,15 @@ trace '<---------------'
 mkdir1(){
   local dir="$1" 
   test -d $dir || { mkdir -p $dir; }
-  ensure test -d $dir
+  ensure "test -d $dir"
 }
 
 ####################################################################
 
 trap_err(){
   print_line
-  echo $FUNCNAME
-  exiting
+  echo "$FUNCNAME"
+  exit 1
 }
 print_line(){
 trace '--------------------------'
@@ -114,7 +114,7 @@ ensure(){
     local args=( $@ )
     local cmd="${args[@]}"
   
-  (  eval "$cmd" ) || {  trace "[ENSURE] $cmd"; print_error; exit 1; }
+  (  commander "$cmd" ) || { exit 1; }
 }
 
 set_mode(){
