config.cfg: try fix recursive call to print_error

--- a/config.cfg
+++ b/config.cfg
@@ -42,7 +42,7 @@ trace(){
 echo 1>&2 $@
 }
 trace_n(){
-echo  1>&2 -n $@
+echo  1>&2 -ne $@
 }
 
 print_color_n () 
@@ -56,7 +56,9 @@ print_color_n ()
 }
 print_color () 
 { 
- print_color_n $@ 
+    local args=( $@ )
+    local cmd="${args[@]}"
+ print_color_n "$cmd"
  trace '.'
 }
 
