debug: recursive call

--- a/config.cfg
+++ b/config.cfg
@@ -131,23 +131,18 @@ fi
 cat1(){
 local file=$1
 
-test -f $file  && (
+test -f $file  && {
 print_line
 trace "[file] $file"
 print_line
 cat -n 1>&2 $file
-print_line;
-)
+print_line; }
 }
 
 exiting(){
 local num=${1:-1} #default: assume err
-if [ $num -eq 0 ];then
-echo trace bye bye
-else
-echo cat1 /tmp/err
-#cat1 /tmp/out
-fi
+print_func
+sleep 1
 exit $num
 }
 
