--- a/config.cfg
+++ b/config.cfg
@@ -113,10 +113,11 @@ distro_name(){
 
 
 ensure(){
+
     local args=( $@ )
     local cmd="${args[@]}"
-  
-  (  commander "$cmd" ) || { exit 1; }
+  eval "$cmd_caller"
+  {  commander "$cmd" } || { exit 1; }
 }
 
 set_mode(){
