--- a/config.cfg
+++ b/config.cfg
@@ -39,7 +39,7 @@ trace '--------------------------'
 }
 
 trace(){
-echo 1>&2 $@
+echo 1>&2 "$@"
 }
 trace_n(){
 echo  1>&2 -ne $@
@@ -132,12 +132,13 @@ fi
 cat1(){
 local file=$1
 
-test -f $file  && {
+test -f $file  && (
 print_line
 trace "[file] $file"
 print_line
 cat -n 1>&2 $file
-print_line; }
+print_line; 
+)
 }
 
 exiting(){
@@ -151,6 +152,7 @@ init_cfg(){
 local dir=$dir_base
  sudo chmod 777 $dir;
 }
+
 export -f init_cfg
 export -f set_mode
 export -f print_ok
