fix: ensure() - syntax

--- a/config.cfg
+++ b/config.cfg
@@ -113,11 +113,10 @@ distro_name(){
 
 
 ensure(){
-
     local args=( $@ )
     local cmd="${args[@]}"
   eval "$cmd_caller"
-  {  commander "$cmd" } || { exit 1; }
+  (  commander "$cmd"; ) || { exit 1; }
 }
 
 set_mode(){
