--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,9 @@
 shopt -s expand_aliases
 set -u
 
+
+
+export PS4=' ${SHLVL}:"$(basename ${BASH_SOURCE:-$0})":${LINENO}(${FUNCNAME[0]})'
 ############################################## on demand
 export cmd_trap_err='trap trap_err ERR'
 export cmd_caller='echo 1>&2 "[CALLER] $(caller)"'
