--- a/config.cfg
+++ b/config.cfg
@@ -3,7 +3,7 @@ set -u
 
 
 
-PS4=' ${SHLVL}:"$(basename ${BASH_SOURCE:-$0})":${LINENO}(${FUNCNAME[0]})'
+PS4=' ${SHLVL}:"$(basename ${BASH_SOURCE:-$0})":${LINENO}'
 ############################################## on demand
 export cmd_trap_err='trap trap_err ERR'
 export cmd_caller='echo 1>&2 "[CALLER] $(caller)"'
