--- a/config.cfg
+++ b/config.cfg
@@ -25,9 +25,10 @@ trace_n "${FUNCNAME[1]}"
 trace '<---------------'
 }
 mkdir1(){
+print_func
   local dir="$1" 
-  test -d $dir || { mkdir -p $dir; }
-  ensure "test -d $dir"
+  ( test -d $dir ) || { mkdir -p $dir; }
+ ensure "test -d $dir"
 }
 
 ####################################################################
