--- a/config.cfg
+++ b/config.cfg
@@ -6,7 +6,9 @@ set -u
 PS4=' ${SHLVL}:"$(basename ${BASH_SOURCE:-$0})":${LINENO}'
 ############################################## on demand
 export cmd_trap_err='trap trap_err ERR'
-export cmd_caller='echo 1>&2 "[CALLER] $(caller)"'
+#export cmd_caller='echo 1>&2 "[CALLER] $(caller)"'
+export cmd_caller='eval echo $(caller)'
+
 ################################### system
 export DEBIAN_FRONTEND=noninteractive
 ############################################## custom names
