--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,17 @@ cache:
 #  - npm_modules
 #  - /tmp
 #  - /opt
+before_install:
+  - chmod u+x bashism.sh
+  - ./bashism.sh
   
 script:
   - sudo apt-get -y update 1>/dev/null
   - chmod u+x travis.sh
   - ./travis.sh
+  
+after_success:
+  - echo success
 
 
 #after_success:
