--- a/config.cfg
+++ b/config.cfg
@@ -95,7 +95,7 @@ indicator ()
 commander(){
     local args=( $@ )
     local cmd="${args[@]}"
-eval "$cmd_caller"
+$cmd_caller
 
     trace "[CMD] $cmd" 
     eval "$cmd" || { exit 1; }
@@ -121,7 +121,7 @@ distro_name(){
 ensure(){
     local args=( $@ )
     local cmd="${args[@]}"
-  eval "$cmd_caller"
+  $cmd_caller
   (  commander "$cmd"; ) || { exit 1; }
 }
 
