--- a/config.cfg
+++ b/config.cfg
@@ -7,7 +7,7 @@ PS4=' ${SHLVL}:"$(basename ${BASH_SOURCE:-$0})":${LINENO}'
 ############################################## on demand
 export cmd_trap_err='trap trap_err ERR'
 #export cmd_caller='echo 1>&2 "[CALLER] $(caller)"'
-export cmd_caller='eval echo $(caller)'
+export cmd_caller='eval echo 1>&2 $(caller)'
 
 ################################### system
 export DEBIAN_FRONTEND=noninteractive
@@ -26,11 +26,12 @@ trace_n '--------------->'
 trace_n "${FUNCNAME[1]}"
 trace '<---------------'
 }
+
 mkdir1(){
 print_func
   local dir="$1" 
-  ( test -d $dir ) || { mkdir -p $dir; }
- ensure "test -d $dir"
+  ( test -d "$dir" ) || { mkdir -p "$dir"; }
+# ensure "test -d $dir"
 }
 
 ####################################################################
