--- a/config.cfg
+++ b/config.cfg
@@ -22,9 +22,9 @@ export dir_nodejs="$dir_base/nodejs"
 export dir_gitlab_ci_runner_repo="$dir_base/gitlab-ci-runner.git"
 ############################################### helpers
 print_func(){
-trace_n '--------------->'
-trace_n "${FUNCNAME[1]}"
-trace '<---------------'
+trace_n '______________/'
+echo 1>&2 "${FUNCNAME[1]}"
+ trace '\______________'
 }
 
 mkdir1(){
@@ -49,7 +49,7 @@ trace(){
 echo 1>&2 "$@"
 }
 trace_n(){
-echo  1>&2 -ne $@
+echo  1>&2 -ne "$@"
 }
 
 print_color_n () 
