--- a/config.cfg
+++ b/config.cfg
@@ -37,8 +37,8 @@ print_func
 ####################################################################
 
 trap_err(){
-  print_line
-  echo "$FUNCNAME"
+print_func
+
   exit 1
 }
 print_line(){
