helper: print_func: pretty-print

--- a/config.cfg
+++ b/config.cfg
@@ -22,9 +22,9 @@ export dir_nodejs="$dir_base/nodejs"
 export dir_gitlab_ci_runner_repo="$dir_base/gitlab-ci-runner.git"
 ############################################### helpers
 print_func(){
-trace_n '______________/'
-echo 1>&2 "${FUNCNAME[1]}"
- trace '\______________'
+echo 1>&2  -n '______________/'
+echo 1>&2 -n  "${FUNCNAME[1]}"
+ echo 1>&2 '\______________'
 }
 
 mkdir1(){
