--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,7 @@ cache:
 #  - npm_modules
 #  - /tmp
 #  - /opt
-before_install:
-  - chmod u+x bashism.sh
-  - ./bashism.sh
+
   
 script:
   - sudo apt-get -y update 1>/dev/null
@@ -40,6 +38,9 @@ script:
 after_success:
   - echo success
 
+after_failure:
+  - chmod u+x bashism.sh
+  - ./bashism.sh
 
 #after_success:
 #  - sleep 5; curl 0.0.0.0:3000
