helpers: mute() - print logs on err

--- a/config.cfg
+++ b/config.cfg
@@ -103,12 +103,16 @@ $cmd_caller
     #|| { exiting; }
     #indicator $? - no sense here
 }
+print_logs(){
+ cat1 /tmp/out | tail -1
+ cat1 /tmp/err
+}
 
 mute(){
     local args=( $@ )
     local cmd="${args[@]}"
     trace_n "[MUTE] $cmd" 
-    eval "$cmd" 1>/tmp/out 2>/tmp/err || { exiting; }
+    eval "$cmd" 1>/tmp/out 2>/tmp/err || { print_logs; exiting; }
     indicator $?
 }
 
@@ -150,7 +154,6 @@ print_line;
 exiting(){
 local num=${1:-1} #default: assume err
 print_func
-sleep 1
 exit $num
 }
 
