helpers: mkdir1 +ensure

--- a/config.cfg
+++ b/config.cfg
@@ -31,7 +31,7 @@ mkdir1(){
 print_func
   local dir="$1" 
   ( test -d "$dir" ) || { mkdir -p "$dir"; }
-# ensure "test -d $dir"
+ ensure "test -d $dir"
 }
 
 ####################################################################
