--- a/config.cfg
+++ b/config.cfg
@@ -11,7 +11,7 @@ export cmd_caller='eval echo 1>&2 $(caller)'
 
 ################################### system
 export DEBIAN_FRONTEND=noninteractive
-export PATH_NODE=/usr/local/bin
+export PATH_NODE='/usr/local/bin'
 export PATH="$PATH:$PATH_NODE"
 ############################################## custom names
 export APP_NAME='myApp'
@@ -163,7 +163,11 @@ init_cfg(){
 local dir=$dir_base
  sudo chmod 777 $dir;
 }
+env1(){
+env | grep PATH
+}
 
+export -f env1
 export -f init_cfg
 export -f set_mode
 export -f print_ok
