helpers: print_func() +print args

--- a/config.cfg
+++ b/config.cfg
@@ -25,13 +25,14 @@ export dir_gitlab_ci_runner_repo="$dir_base/gitlab-ci-runner.git"
 ############################################### helpers
 print_func(){
 echo 1>&2  -n '______________/'
-echo 1>&2 -n  "${FUNCNAME[1]}"
+echo 1>&2 -n  "${FUNCNAME[1]} $@"
  echo 1>&2 '\______________'
 }
 
 mkdir1(){
-print_func
+
   local dir="$1" 
+  print_func $dir
   ( test -d "$dir" ) || { mkdir -p "$dir"; }
  ensure "test -d $dir"
 }
@@ -128,7 +129,7 @@ distro_name(){
 ensure(){
     local args=( $@ )
     local cmd="${args[@]}"
-  $cmd_caller
+ # $cmd_caller
   (  commander "$cmd"; ) || { exit 1; }
 }
 
