fix: npm not found

--- a/config.cfg
+++ b/config.cfg
@@ -162,7 +162,8 @@ exit $num
 
 init_cfg(){
 local dir=$dir_base
- sudo chmod 777 $dir;
+ commander sudo chmod 777 $dir;
+ ensure "touch $dir/test_creation_of_dir"
 }
 env1(){
 env | grep PATH
