--- a/config.cfg
+++ b/config.cfg
@@ -169,6 +169,14 @@ env1(){
 env | grep PATH
 }
 
+apt1(){
+local packages="$@"
+for package in $packages;do
+( dpkg -l | grep $package ) || { commander sudo apt-get install $package; }
+done
+}
+
+export -f apt1
 export -f env1
 export -f init_cfg
 export -f set_mode
