--- a/config.cfg
+++ b/config.cfg
@@ -172,7 +172,7 @@ env | grep PATH
 apt1(){
 local packages="$@"
 for package in $packages;do
-( dpkg -l | grep $package ) || { commander sudo apt-get install $package; }
+( exec 2>/dev/null dpkg -l | grep $package ) || { commander sudo apt-get install $package; }
 done
 }
 
