--- a/config.cfg
+++ b/config.cfg
@@ -175,7 +175,14 @@ for package in $packages;do
 ( exec 2>/dev/null dpkg -l | grep $package ) || { commander sudo apt-get install $package; }
 done
 }
+function path(){
+    old=$IFS
+    IFS=:
+    printf "%s\n" $PATH
+    IFS=$old
+}
 
+export -f path
 export -f apt1
 export -f env1
 export -f init_cfg
