--- a/config.cfg
+++ b/config.cfg
@@ -11,8 +11,9 @@ export cmd_caller='eval echo 1>&2 $(caller)'
 
 ################################### system
 export DEBIAN_FRONTEND=noninteractive
-export PATH_NODE='/usr/local/bin'
-export PATH=$PATH:$PATH_NODE
+export PATH_BIN="$dir_base/bin"
+export PATH=$PATH:$PATH_BIN
+#$PATH_NODE
 ############################################## custom names
 export APP_NAME='myApp'
 export VER_MEAN_CLI='0.9.3'
