fix: mkdir /opt/bin

--- a/config.cfg
+++ b/config.cfg
@@ -12,7 +12,7 @@ export cmd_caller='eval echo 1>&2 $(caller)'
 ################################### system
 export DEBIAN_FRONTEND=noninteractive
 export PATH_BIN="$dir_base/bin"
-export PATH=$PATH:$PATH_BIN
+export PATH=$PATH:"$PATH_BIN"
 #$PATH_NODE
 ############################################## custom names
 export APP_NAME='myApp'
@@ -164,6 +164,7 @@ exit $num
 init_cfg(){
 local dir=$dir_base
  commander sudo chmod 777 $dir;
+ commander mkdir -p $PATH_BIN
  ensure "touch $dir/test_creation_of_dir"
 }
 env1(){
