fix: order of commands

--- a/config.cfg
+++ b/config.cfg
@@ -10,7 +10,8 @@ export cmd_trap_err='trap trap_err ERR'
 export cmd_caller='eval echo 1>&2 $(caller)'
 
 ################################### system
-export DEBIAN_FRONTEND=noninteractive
+export dir_base='/opt'
+export DEBIAN_FRONTEND='noninteractive'
 export PATH_BIN="$dir_base/bin"
 export PATH=$PATH:"$PATH_BIN"
 #$PATH_NODE
@@ -18,7 +19,6 @@ export PATH=$PATH:"$PATH_BIN"
 export APP_NAME='myApp'
 export VER_MEAN_CLI='0.9.3'
 ##############################################dir - structure
-export dir_base='/opt'
 export path_my_app="$dir_base"
 export dir_my_app="$dir_base/$APP_NAME"
 export dir_nodejs="$dir_base/nodejs"
