--- a/config.cfg
+++ b/config.cfg
@@ -175,7 +175,7 @@ env | grep 'dir_'
 apt1(){
 local packages="$@"
 for package in $packages;do
-( exec 2>/dev/null dpkg -l | grep $package ) || { commander sudo apt-get install $package; }
+( exec 2>/dev/null dpkg -l | grep -m1 $package ) || { commander sudo apt-get install $package; }
 done
 }
 function path(){
