debug: inspect env -
we want /opt/bin to be in PATH

--- a/config.cfg
+++ b/config.cfg
@@ -169,7 +169,8 @@ local dir=$dir_base
  ensure "touch $dir/test_creation_of_dir"
 }
 env1(){
-env | grep 'dir_'
+#env | grep 'dir_'
+echo $PATH | grep opt
 }
 
 apt1(){
