--- a/config.cfg
+++ b/config.cfg
@@ -162,11 +162,11 @@ print_func
 exit $num
 }
 
-init_cfg(){
+permission_fix(){
 local dir=$dir_base
  commander sudo chmod 777 $dir;
  commander mkdir -p $PATH_BIN
- ensure "touch $dir/test_creation_of_dir"
+commander ensure "touch $dir/test_creation_of_dir"
 }
 env1(){
 #env | grep 'dir_'
@@ -189,7 +189,7 @@ function path(){
 export -f path
 export -f apt1
 export -f env1
-export -f init_cfg
+export -f permission_fix
 export -f set_mode
 export -f print_ok
 export -f print_error
