--- a/config.cfg
+++ b/config.cfg
@@ -29,6 +29,11 @@ echo 1>&2  -n '______________/'
 echo 1>&2 -n  "${FUNCNAME[1]} $@"
  echo 1>&2 '\______________'
 }
+print_title(){
+echo 1>&2  -n '______________/'
+echo 1>&2 -n  "About: $@"
+ echo 1>&2 '\______________'
+}
 
 mkdir1(){
 
@@ -208,3 +213,4 @@ export -f exiting
 export -f print_func
 export -f trace_n
 export -f cat1
+export -f print_title
