travis env VS docker env
- where did NVM came from ?
- we may need to change user on travis env to be more independent

--- a/config.cfg
+++ b/config.cfg
@@ -175,7 +175,7 @@ commander ensure "touch $dir/test_creation_of_dir"
 }
 env1(){
 #env | grep 'dir_'
-echo $PATH | grep opt
+echo $PATH | grep nvm
 }
 
 apt1(){
