--- a/config.cfg
+++ b/config.cfg
@@ -31,6 +31,7 @@ echo 1>&2 -n  "${FUNCNAME[1]} $@"
 }
 print_title(){
 echo 1>&2  -n '______________/'
+print_color_n 34 '[-]'
 echo 1>&2 -n  "About: $@"
  echo 1>&2 '\______________'
 }
