--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,8 @@ before_install:
   #- ./bashism.sh
 
 script:
-  - sudo apt-get -y update 1>/dev/null
-  - chmod u+x *.sh . -R
+#  - sudo apt-get -y update 1>/dev/null
+  - chmod u+x proxy.sh
   - ./proxy.sh
   
 after_success:
